<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">TruelySell</string>
    <string name="txt_upload_ic_card">Upload IC Card</string>
    <string name="err_username">Enter Username</string>
    <string name="err_email">Enter Email</string>
    <string name="err_phone_no">Enter Phone Number</string>
    <string name="err_max_no">Maximum 15 numbers are allowed</string>
    <string name="err_valid_email">Enter Valid Email</string>
    <string name="txt_gallery">Gallery</string>
    <string name="txt_camera">Camera</string>
    <string name="code_install_camera_app">Please install camera app</string>
    <string name="code_install_file_manager">Please install file manager</string>
    <string name="code_invalid_url_or_file_path">Invalid file path</string>
    <string name="code_select_a_file">Choose picture</string>
    <string name="err_max_characters">Maximum 20 characters are allowed</string>
    <string name="GooglePlacesAPIKey">AIzaSyAgfPt-Bxl9JVqzzVgBUT7sxjfX0-OFLDs</string>
    <string name="txt_my_profile">My Profile</string>
    <string name="txt_my_providers">My Services</string>
    <string name="txt_logout">Logout</string>
    <string name="txt_enable_internet">Please Enable Internet</string>
    <string name="txt_server_error">Oops, problem occurred while connecting to server...</string>
    <string name="txt_yes">Yes</string>
    <string name="txt_no">No</string>
    <string name="ok">OK</string>
    <string name="done">Done</string>
    <string name="txt_request">Requests</string>
    <string name="txt_provider">Providers</string>
    <string name="txt_no_data">No data were found!</string>
    <string name="txt_no_details">No details were found!</string>
    <string name="txt_logout_confirm">Are you sure you want to Logout?</string>
    <string name="hint_subscription">Subscription</string>
    <string name="txt_skipnow">Skip Now</string>
    <string name="txt_buy_now">Buy Now</string>
    <string name="txt_accept_request">Accept Request</string>
    <string name="txt_next">Next</string>
    <string name="txt_submit">SUBMIT</string>
    <string name="txt_availability">Availability</string>
    <string name="txt_from">From</string>
    <string name="txt_to">To</string>
    <string name="err_txt_title">Title cannot be empty</string>
    <string name="err_txt_addr">Location address cannot be empty</string>
    <string name="err_txt_latlng">Error in location. Please try again</string>
    <string name="err_txt_contact_no">Contact number cannot be empty</string>
    <string name="txt_info">Info</string>
    <string name="txt_all_days">All Days</string>
    <string name="chooseLocation"><u>Choose Location</u></string>
    <string name="err_txt_desc_empty">Please enter description</string>
    <string name="err_txt_desc_atleast_1">Please enter atleast one description</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="location_Permission_Needed">Location Permission Needed</string>
    <string name="location_Permission_msg">This app needs the Location permission, please accept to use location functionality</string>
    <string name="err_txt_permission">These permissions are mandatory for the application. Please allow access.</string>
    <string name="err_txt_install_play_ser">Please install Google Play services.</string>
    <string name="err_txt_enable_permission">Enable Permission</string>
    <string name="typeSomething">Enter your message..</string>
    <string name="txt_change_pwd">Change Password</string>
    <string name="label_buy_now">Buy Now</string>
    <string name="payment">Payment</string>
    <string name="thankyou">Thank You!</string>
    <string name="thankyou_desc">You\'re going to do great things with TruelySell</string>
    <string name="getStarted">Let\'s Get Started</string>
    <string name="err_payment">Please fill above details</string>
    <string name="buy_subscription">BUY SUBSCRIPTION</string>
    <string name="thank_you_upgrade">Thank you for upgrading your account!</string>
    <string name="gotoSubscription">GO TO SUBSCRIPTION</string>
    <string name="turn_on_loc">Turn On Location</string>
    <string name="txt_location_access">LOCATION ACCESS</string>
    <string name="loc_sub_text">Let us know where are you so we can recommend nearby services. Application would like to use your current location.</string>
    <string name="txt_category">Category</string>
    <string name="txt_subcategory">Sub Category</string>
    <string name="txt_select_category">Select Category</string>
    <string name="err_category">Please choose category</string>
    <string name="err_subcategory">Please choose sub category</string>
    <string name="txt_book">Book</string>
    <string name="txt_ratenow">Rate now</string>
    <string name="leave_your_comments">Leave your Comments</string>
    <string name="choose_type">Choose Type</string>
    <string name="how_was_your_experience_with_this_service">How was your experience with this service ?</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="share_app">Share App</string>
    <string name="email_address">Email Address</string>
    <string name="txtchooseLocation">Choose Location</string>
    <string name="viewdirections">View Directions</string>
    <string name="my_history">My History</string>
    <string name="txt_change_language">Change Language</string>
    <string name="txt_change_location">Change Location</string>
    <string name="txt_others">Others</string>
    <string name="txt_make_a_suggestion">Make a suggestion</string>
    <string name="txt_rate_our_app">Rate Our App</string>
    <string name="txt_delete_account">Delete Account</string>
    <string name="txt_delete_acc">Are you sure want to Delete the Account?</string>
    <string name="txt_regional">Regional</string>
    <string name="dialog_seekbar_transition_time">Item transition time in millis</string>
    <string name="pref_key_transition_time" translatable="false">pref_key_transition_time</string>
    <string name="err_cost">Please Enter Price</string>
    <string name="txt_select_your_subcategory">Select your subcategory here..</string>
    <string name="err_about">Tell about service</string>
    <string name="txt_delete_service">Are you sure want to delete the service?</string>
    <string name="txt_update_profile">Update Profile</string>
    <string name="txt_delete_image">Are you sure want to delete this image?</string>
    <string name="txt_subscription_plan">Subscription Plan</string>
    <string name="txt_name">Name</string>
    <string name="txt_mobile_number">Mobile Number</string>
    <string name="txt_join_as_professional">Join as Professional</string>
    <string name="txt_what_service_do_you_provide">What service do you provide?</string>
    <string name="txt_get_started">Get Started</string>
    <string name="txt_choose_sub_category">Choose Sub category</string>
    <string name="txt_join_as_user">Join as User</string>
    <string name="txt_already_a_user">Already a user</string>
    <string name="txt_previous">Previous</string>
    <string name="txt_appointment_slot">Appointment Slot</string>
    <string name="txt_message_from_buyers">Message from Buyers</string>
    <string name="txt_booking_lists">Booking Lists</string>
    <string name="hint_service_location">Service Location</string>
    <string name="txt_description">Description</string>
    <string name="txt_reject_request">Reject Request</string>
    <string name="default_notification_channel_id">TruelySell1</string>
    <string name="txt_register">Register</string>
    <string name="txt_chat_lists">Chat List</string>
    <string name="txt_notifications">Notifications</string>
    <string name="try_again">Try Again Later</string>
    <string name="err_txt_service_offered_empty">Enter Service Offered</string>
    <string name="email">Email</string>
    <string name="subscribe_now">Subscribe Now</string>
    <string name="title_wallet">Wallet</string>
    <string name="txt_current_balance">Current Balance</string>
    <string name="txt_add_cash">Add Cash</string>
    <string name="txt_enter_withdraw_amount">Enter Amount</string>
    <string name="text_total_wallet_balance">Total Wallet Balance</string>
    <string name="text_transaction_history">Transaction History</string>
    <string name="text_view_all">View All</string>
    <string name="text_filter">Filter</string>
    <string name="text_saved_cards">Saved Cards</string>
    <string name="text_add_a_card">Add a card</string>
    <string name="txt_card_number">Enter your card number</string>
    <string name="text_card_expiry">Card Expiry</string>
    <string name="text_mm_yy">MM YY</string>
    <string name="text_yy">YY</string>
    <string name="text_cvv">CVV</string>
    <string name="text_add_cash_securely">Add Cash Securely</string>
    <string name="txt_card_secure">Your card details would be securely saved for faster payments. Your CVV will not be saved.</string>
    <string name="text_debit_card_credit_card">Debit card / Credit card</string>
    <string name="txt_account_no">Account No -</string>
    <string name="txt_ccv">CVV</string>
    <string name="txt_enter_ccv">Enter CCV</string>
    <string name="txt_order_confirmed_warn">Once your order is verified we will process the payment from your saved card.</string>
    <string name="txt_verify">Verify</string>
    <string name="txt_wallet">Wallet</string>
    <string name="txt_login">Login</string>
    <string name="txt_rejected_reason">Rejected Reason</string>
    <string name="txt_reason">Reason</string>
    <string name="txt_admin_comments">Comments</string>
    <string name="facebook_app_id">273076270136264</string>
    <string name="txt_cancel_the_service">Cancel the service</string>
    <string name="txt_active_service">Are you sure want Active your service?</string>
    <string name="txt_inactive_service">Are you sure want Inactive your service?</string>
    <string name="txt_are_you_sure">Are you sure?</string>
    <string name="txt_change_number_sub">Want to change your existing number \n 9894406804</string>
    <string name="txt_enter_otp">Enter OTP</string>
    <string name="txt_didn_t_receive_otp">Didn\'t Receive OTP?</string>
    <string name="tv_resendcode">Resend Code</string>
    <string name="txt_change_number">Change Number</string>
    <string name="txt_inactive">Inactive</string>
    <string name="txt_active">Active</string>
    <string name="txt_all">All</string>
    <string name="txt_change_status_type">Change Status Type</string>
    <string name="acc_name">ACCOUNT HOLDERS NAME</string>
    <string name="acc_num">ACCOUNT NUMBER</string>
    <string name="IBAN">IBAN</string>
    <string name="bank_name">BANK NAME</string>
    <string name="bank_addr">BANK ADDRESS</string>
    <string name="sort_code">SORT CODE(UK)</string>
    <string name="routing_num">SWIFT CODE(US)</string>
    <string name="hint_routing_num">The American Bankers Association Number (consists of 9 digits) and is also called a ABA Routing Number</string>
    <string name="IFSC_code">IFSC CODE(INDIAN)</string>
    <string name="hint_ifsc_code">Financial System Code, which is a unique 11-digit code that identifies the bank branch i.e. ICIC0001245</string>
    <string name="text_update">Update</string>
    <string name="uk_bank_code">UK Bank code (6 digits usually displayed as 3 pairs of numbers)</string>
</resources>