<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/ctv_acc_holder_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/acc_name" />

            <EditText
                android:id="@+id/et_acc_holder_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_10sdp" />

            <TextView
                android:id="@+id/ctv_acc_num"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/acc_num" />

            <EditText
                android:id="@+id/et_acc_num"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:textSize="@dimen/_10sdp" />

            <TextView
                android:id="@+id/ctv_iban"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/IBAN" />

            <EditText
                android:id="@+id/et_IBAN_num"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_10sdp" />

            <TextView
                android:id="@+id/ctv_bank_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bank_name" />

            <EditText
                android:id="@+id/et_bank_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_10sdp" />

            <TextView
                android:id="@+id/ctv_bank_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bank_addr" />

            <EditText
                android:id="@+id/et_bank_addr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_10sdp" />

            <TextView
                android:id="@+id/ctv_sort_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sort_code" />

            <EditText
                android:id="@+id/et_sort_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/uk_bank_code"
                android:singleLine="true"
                android:textSize="@dimen/_10sdp" />

            <TextView
                android:id="@+id/ctv_swift_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/routing_num" />

            <EditText
                android:id="@+id/et_routing_num"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_routing_num"
                android:singleLine="true"
                android:textSize="@dimen/_10sdp" />

            <TextView
                android:id="@+id/ctv_ifsc_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/IFSC_code" />

            <EditText
                android:id="@+id/et_IFSC_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_ifsc_code"
                android:singleLine="true"
                android:textSize="@dimen/_10sdp" />

            <Button
                android:id="@+id/bt_update"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_margin="@dimen/_10sdp"
                android:background="@color/colorPrimary"
                android:padding="@dimen/_10sdp"
                android:text="@string/text_update"
                android:textAllCaps="false"
                android:textColor="@android:color/white" />

        </LinearLayout>
    </ScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>