<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/_250sdp"
    android:layout_height="wrap_content"
    android:padding="@dimen/_10sdp"
    android:layout_gravity="center"
    android:background="@drawable/shape_rect_round_corner_white"
    android:orientation="vertical">


    <TextView
        android:id="@+id/txt_are_you_sure"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/txt_are_you_sure"
        android:textColor="@android:color/black"
        android:textSize="@dimen/_11sdp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txt_change_number_sub"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_5sdp"
        android:gravity="center"
        android:text="@string/txt_change_number_sub"
        android:textColor="@android:color/black"
        android:textSize="@dimen/_11sdp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt_yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:text="@string/txt_yes"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/_10sdp"
            android:text="@string/txt_no"
            android:layout_marginEnd="@dimen/_10sdp"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>