<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:background="@drawable/shape_rect_round_corner_white">

        <LinearLayout
            android:id="@+id/ll_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_statustype"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPink"
                android:gravity="center"
                android:padding="@dimen/_10sdp"
                android:text="@string/txt_change_status_type"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/tv_status_all"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/_10sdp"
                android:text="@string/txt_all"
                android:textSize="@dimen/_12sdp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginLeft="@dimen/_5sdp"
                android:layout_marginRight="@dimen/_5sdp"
                android:background="@color/colorLightGray" />

            <TextView
                android:id="@+id/tv_status_inprogress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/_10sdp"
                android:text="@string/txt_active"
                android:textSize="@dimen/_12sdp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginLeft="@dimen/_5sdp"
                android:layout_marginRight="@dimen/_5sdp"
                android:background="@color/colorLightGray" />

            <TextView
                android:id="@+id/tv_status_completed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/_10sdp"
                android:text="@string/txt_inactive"
                android:textSize="@dimen/_12sdp" />

        </LinearLayout>
    </FrameLayout>

    <ImageView
        android:id="@+id/iv_exit"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="right|top"
        android:layout_margin="@dimen/_3sdp"
        android:background="@drawable/bg_gradient_color_circle"
        android:elevation="@dimen/_5sdp"
        android:src="@drawable/ic_clear"
        android:visibility="gone" />
</FrameLayout>


