<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:minWidth="500dp"
    android:minHeight="250dp"
    android:orientation="vertical"
    android:padding="10dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:src="@drawable/star" />


        <TextView
            android:id="@+id/txt_how_was_exp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/how_was_your_experience_with_this_service"
            android:textSize="14dp" />


        <TextView
            android:id="@+id/tv_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:drawableEnd="@drawable/ic_down_arrow_24"
            android:ems="12"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/choose_type"
            android:visibility="gone" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_types"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <androidx.appcompat.widget.AppCompatRatingBar
            android:id="@+id/rb_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:numStars="5"
            android:stepSize="1"
            android:theme="@style/RatingBar" />

        <TextView
            android:id="@+id/txt_leave_your_comments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/leave_your_comments"
            android:visibility="visible" />

        <EditText
            android:id="@+id/et_comments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/shape_rect_round_corner"
            android:gravity="top|left"
            android:hint=""
            android:maxLines="5"
            android:minLines="5"
            android:scrollbars="vertical"
            android:textSize="10dp"
            android:visibility="visible" />

        <Button
            android:id="@+id/btn_send_feeedback"
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/shape_rect_round_corner_filled_red"
            android:ems="15"
            android:text="@string/txt_submit"
            android:textColor="@android:color/white"
            android:textSize="10dp" />
    </LinearLayout>

</androidx.core.widget.NestedScrollView>